--- a/sdks/java/core/build.gradle
+++ b/sdks/java/core/build.gradle
@@ -74,3 +74,18 @@ dependencies {
   shadowTest library.java.mockito_core
   shadowTest "com.esotericsoftware.kryo:kryo:2.21"
 }
+
+configurations {
+  testArtifact
+}
+
+task testJar(type: Jar) {
+  from sourceSets.test.output
+  classifier = 'test'
+}
+
+artifacts {
+  testArtifact testJar
+}
+
+
