tpc module init
(cherry picked from commit 8dbed2e)

--- a/settings.gradle
+++ b/settings.gradle
@@ -96,6 +96,8 @@ include "beam-sdks-java-extensions-sql-jdbc"
 project(":beam-sdks-java-extensions-sql-jdbc").dir = file("sdks/java/extensions/sql/jdbc")
 include "beam-sdks-java-extensions-sql-shell"
 project(":beam-sdks-java-extensions-sql-shell").dir = file("sdks/java/extensions/sql/shell")
+include "beam-sdks-java-extensions-tpc"
+project(":beam-sdks-java-extensions-tpc").dir = file("sdks/java/extensions/tpc")
 include "beam-sdks-java-fn-execution"
 project(":beam-sdks-java-fn-execution").dir = file("sdks/java/fn-execution")
 include "beam-sdks-java-harness"
