--- a/settings.gradle
+++ b/settings.gradle
@@ -172,3 +172,5 @@ include "beam-sdks-python-container"
 project(":beam-sdks-python-container").dir = file("sdks/python/container")
 include "beam-vendor-sdks-java-extensions-protobuf"
 project(":beam-vendor-sdks-java-extensions-protobuf").dir = file("vendor/sdks-java-extensions-protobuf")
+include "beam-website"
+project(":beam-website").dir = file("website")
