--- a/website/Rakefile
+++ b/website/Rakefile
@@ -13,6 +13,10 @@ task :test do
     :check_html => true,
     :file_ignore => [/javadoc/, /v2/, /pydoc/],
     :url_ignore => [
+        # Javadocs and Pydocs are only available on asf-site branch
+        /documentation\/sdks\/javadoc/,
+        /documentation\/sdks\/pydoc/,
+
         /jstorm.io/,
         /datatorrent.com/,
         /ai.google/ # https://issues.apache.org/jira/browse/INFRA-16527
