--- a/build.gradle
+++ b/build.gradle
@@ -144,6 +144,9 @@ rat {
     "**/_config.yml",
     "**/_config_test.yml",
     "**/.htaccess",
+    "website/.bundle/**/*",
+    "website/.sass-cache/**/*",
+    "website/.testcontent/**/*",
     "website/src/_sass/_bootstrap.scss",
     "website/src/_sass/bootstrap/**/*",
     "website/src/js/bootstrap*.js",
