--- a/build.gradle
+++ b/build.gradle
@@ -191,6 +191,7 @@ task javaPostCommit() {
   dependsOn ":beam-runners-google-cloud-dataflow-java:postCommit"
   dependsOn ":beam-sdks-java-io-google-cloud-platform:postCommit"
   dependsOn ":beam-sdks-java-extensions-sql:postCommit"
+  dependsOn ":beam-sdks-java-extensions-sql-jdbc:postCommit"
 }
 
 task goPreCommit() {
