rename JdbcJarTest to avoid run it in unit tests.

--- a/sdks/java/extensions/sql/jdbc/build.gradle
+++ b/sdks/java/extensions/sql/jdbc/build.gradle
@@ -64,7 +64,7 @@ task shadowJarTest(type: Test, dependsOn: ":beam-sdks-java-extensions-sql-jdbc:s
 
   systemProperty "driver.jar", configurations.shadowTestRuntimeClasspath[1]
 
-  include '**/JdbcJarTest.class'
+  include '**/JdbcJarPreCommitCheck.class'
   classpath = configurations.integrationTest
   useJUnit { }
 }
