--- a/sdks/java/extensions/sql/build.gradle
+++ b/sdks/java/extensions/sql/build.gradle
@@ -27,8 +27,8 @@ applyJavaNature(
     dependencies {
       include(dependency(library.java.protobuf_java))
       include(dependency(library.java.protobuf_java_util))
-//      include(dependency("org.apache.calcite:.*"))
-//      include(dependency("org.apache.calcite.avatica:.*"))
+      include(dependency("org.apache.calcite:.*"))
+      include(dependency("org.apache.calcite.avatica:.*"))
       include(dependency("org.codehaus.janino:.*"))
     }
     relocate "com.google.protobuf", getJavaRelocatedPath("com.google.protobuf")
