--- a/runners/flink/job-server/build.gradle
+++ b/runners/flink/job-server/build.gradle
@@ -29,7 +29,8 @@ applyJavaNature(
  * the following projects are evaluated before we evaluate this project. This is because
  * we are attempting to reference the "sourceSets.test.output" directly.
  */
-evaluationDependsOn(":beam-runners-flink_2.11")
+evaluationDependsOn(":beam-sdks-java-core")
+evaluationDependsOn(":beam-runners-core-java")
 
 description = "Apache Beam :: Runners :: Flink :: Job Server"
 
@@ -44,6 +45,8 @@ configurations {
 dependencies {
   compile project(path: ":beam-runners-flink_2.11", configuration: "shadow")
   validatesRunner project(path: ":beam-runners-flink_2.11", configuration: "shadowTest")
+  validatesRunner project(path: ":beam-sdks-java-core", configuration: "shadowTest")
+  validatesRunner project(path: ":beam-runners-core-java", configuration: "shadowTest")
   validatesRunner project(path: ":beam-runners-reference-java", configuration: "shadowTest")
   compile project(path: ":beam-sdks-java-extensions-google-cloud-platform-core", configuration: "shadow")
 //  TODO: Enable AWS and HDPS file system.
@@ -61,21 +64,25 @@ runShadow {
 }
 
 class PortableValidatesRunnerConfig {
+  // Task name for validate runner case.
   String name
+  // Fully qualified JobServerClass name to use.
   String jobServerDriver
+  // A string representing the jobServer Configuration.
   String jobServerConfig
+  // Flag to include tests for streaming or batch.
   boolean streaming
 }
 
-def createPortableValidatesRunnerTask(Map m) {
-  def config = m as PortableValidatesRunnerConfig
+def createPortableValidatesRunnerTask = {
+  def config = it as PortableValidatesRunnerConfig
   tasks.create(name: config.name, type: Test) {
     group = "Verification"
     description = "Validates the PortableRunner with JobServer ${config.jobServerDriver}"
     systemProperty "beamTestPipelineOptions", JsonOutput.toJson([
             "--runner=org.apache.beam.runners.reference.testing.TestPortableRunner",
             "--jobServerDriver=${config.jobServerDriver}",
-            "--jobServerConfig=${config.jobServerConfig}",
+            config.jobServerConfig ? "--jobServerConfig=${config.jobServerConfig}" : "",
     ])
     classpath = configurations.validatesRunner
     testClassesDirs = files(project(":beam-sdks-java-core").sourceSets.test.output.classesDirs, project(":beam-runners-core-java").sourceSets.test.output.classesDirs)
@@ -104,7 +111,7 @@ def createPortableValidatesRunnerTask(Map m) {
   }
 }
 
-createPortableValidatesRunnerTask(name: "validatesPortableRunner", jobServerDriver: "org.apache.beam.runners.flink.FlinkJobServerDriver", jobServerConfig: "[]", streaming: false)
+createPortableValidatesRunnerTask(name: "validatesPortableRunner", jobServerDriver: "org.apache.beam.runners.flink.FlinkJobServerDriver", jobServerConfig: "", streaming: false)
 
 task validatesRunner {
   group = "Verification"
