--- a/sdks/python/container/Dockerfile
+++ b/sdks/python/container/Dockerfile
@@ -81,16 +81,18 @@ RUN \
     pip install "protorpc == 0.11.1" && \
     pip install "python-gflags == 3.0.6" && \
     # Check that the fast implementation of protobuf is used.
-    python -c "from google.protobuf.internal import api_implementation; assert api_implementation._default_implementation_type == 'cpp'; print 'Verified fast protobuf used.'"
+    python -c "from google.protobuf.internal import api_implementation; assert api_implementation._default_implementation_type == 'cpp'; print 'Verified fast protobuf used.'" && \
+    # Remove pip cache.
+    rm -rf /root/.cache/pip
+
 
 COPY target/apache-beam.tar.gz /opt/apache/beam/tars/
-RUN pip install /opt/apache/beam/tars/apache-beam.tar.gz[gcp]
+RUN pip install /opt/apache/beam/tars/apache-beam.tar.gz[gcp] && \
+    # Remove pip cache.
+    rm -rf /root/.cache/pip
 
 COPY user_python_requirements.txt /tmp/
 RUN pip install -r /tmp/user_python_requirements.txt
-
-# Remove pip cache.
-RUN rm -rf /root/.cache/pip
 
 ADD target/linux_amd64/boot /opt/apache/beam/
 
