--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -245,7 +245,8 @@ task validatesRunnerStreamingTests(dependsOn: 'installGcpTest') {
   doLast {
     exec {
       executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && ./scripts/run_postcommit.sh ValidatesRunner streaming"
+      // TODO(BEAM-3544): Disable tests with sickbay-streaming tag.
+      args '-c', ". ${envdir}/bin/activate && ./scripts/run_postcommit.sh ValidatesRunner,'!sickbay-streaming' streaming"
     }
   }
 }
