[BEAM-4860] Ensure that shaded artifacts that are produced don't leak non org.apache.beam classes
We also fix the single issue where we weren't shading com/google/thirdparty/publicsuffix from Guava correctly.

--- a/runners/flink/job-server/build.gradle
+++ b/runners/flink/job-server/build.gradle
@@ -18,6 +18,7 @@
 
 apply plugin: org.apache.beam.gradle.BeamModulePlugin
 applyJavaNature(
+  validateShadowJar: false,
   shadowClosure: {
     append "reference.conf"
   },
