[BEAM-4629] Output the names of the failing licenses as part of the build process.
An example build output with a failing license:
```
> Task :rat FAILED
Unapproved/unknown license: /usr/local/google/home/lcwik/git/beam/build.gradle

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':rat'.
> Found 1 files with unapproved/unknown licenses. See file:/usr/local/google/home/lcwik/git/beam/build/reports/rat/rat-report.xml
```

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 // See build_rules.gradle for documentation on default build tasks
 // and properties that are enabled in addition to natures
 // that can be applied to configure a project for certain common
@@ -147,8 +146,11 @@ rat {
     exclusions.addAll(gitIgnoreExcludes)
   }
 
-  plainOutput = true
-  xmlOutput = false
+  // Combining verbose with only XML output has each failing license logged.
+  // See https://github.com/eskatos/creadur-rat-gradle/issues/8 for further details.
+  verbose = true
+  plainOutput = false
+  xmlOutput = true
   htmlOutput = false
   failOnError = true
   excludes = exclusions
