--- a/build.gradle
+++ b/build.gradle
@@ -231,3 +231,10 @@ release {
     requireBranch = 'release-.*|master'
   }
 }
+
+if (project.hasProperty('overrideBuildEnvironment')) {
+  //The property is automatically passed to the Gradle build when the project is built at LinkedIn
+  //The property contains the file path to a script plugin that 'adapts' this OS project to LinkedIn
+  //In order to adapt the project, we need to apply this script plugin:
+  apply from: project.overrideBuildEnvironment
+}
