--- a/sdks/java/io/elasticsearch-tests/elasticsearch-tests-5/build.gradle
+++ b/sdks/java/io/elasticsearch-tests/elasticsearch-tests-5/build.gradle
@@ -31,7 +31,7 @@ test {
 
 def jna_version = "4.1.0"
 def log4j_version = "2.6.2"
-def elastic_search_version = "5.6.3"
+def elastic_search_version = "6.3.2"
 
 configurations.all {
   resolutionStrategy {
@@ -48,7 +48,10 @@ dependencies {
   testCompile "org.elasticsearch.plugin:transport-netty4-client:$elastic_search_version"
   testCompile "com.carrotsearch.randomizedtesting:randomizedtesting-runner:2.5.0"
   testCompile "org.elasticsearch:elasticsearch:$elastic_search_version"
-
+  testCompile ('junit:junit:4.12') {
+    exclude module : 'hamcrest'
+    exclude module : 'hamcrest-core'
+  }
   testCompile project(path: ":beam-sdks-java-core", configuration: "shadow")
   testCompile project(path: ":beam-sdks-java-io-elasticsearch", configuration: "shadow")
   testCompile project(path: ":beam-sdks-java-io-common", configuration: "shadowTest")
