--- a/build.gradle
+++ b/build.gradle
@@ -196,9 +196,9 @@ task javaPostCommit() {
 task goPreCommit() {
   dependsOn ":rat"
   dependsOn ":beam-sdks-go:test"
+  dependsOn ":beam-sdks-go-test:test"
 
   dependsOn ":beam-sdks-go-examples:build"
-  dependsOn ":beam-sdks-go-test:build"
 
   // Ensure all container Go boot code builds as well.
   dependsOn ":beam-sdks-java-container:build"
