Gradle change to fork the builds

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,10 +16,9 @@
 # limitations under the License.
 ################################################################################
 org.gradle.caching=true
-org.gradle.parallel=true
+org.gradle.parallel=false
 org.gradle.configureondemand=true
 offlineRepositoryRoot=offline-repository
 signing.gnupg.executable=gpg
 signing.gnupg.useLegacyGpg=true
 
-version=2.7.0-SNAPSHOT
