--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,4 @@ offlineRepositoryRoot=offline-repository
 signing.gnupg.executable=gpg
 signing.gnupg.useLegacyGpg=true
 
-version=2.6.0-RC2
+version=2.6.0-SNAPSHOT
