--- a/sdks/python/container/build.gradle
+++ b/sdks/python/container/build.gradle
@@ -59,7 +59,7 @@ golang {
 
 docker {
   name containerImageName(name: "python")
-  files "./build"
+  files "./build/"
 }
 
 // Ensure that making the docker image builds any required artifacts
