Implement integration tests for PubSub on DirectRunner
- Add TestDirectRunner wrapper to run integration tests.
- Update pubsub_integration_test to work with DirectRunner.
- Make DirectRunner error out on PubSub features it doesn't support.
- Update run_postcommit.sh
  - Allow running against TestDirectRunner, with a limited suite of
  tests (currently just 3).
  - Fixes nosetests option so it logs prints and logging.warning/error
  to the console.
- Add cancel() operation to DirectPipelineResult. This allows
pubsub_integration_test to stop the test pipeline since it has no
natural termination.
- Fixed a small inconsistency in DirectRunner's timestamp_attribute
implementation (vs Dataflow's behavior) in transform_evaluator.py.

--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -187,12 +187,17 @@ task installGcpTest(dependsOn: 'setupVirtualenv') {
   }
 }
 
-task localWordCount(dependsOn: 'installGcpTest') {
+task directRunnerIT(dependsOn: 'installGcpTest') {
   doLast {
     exec {
       executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && python -m apache_beam.examples.wordcount --output /tmp/py-wordcount-direct"
-      // TODO: Check that the output file is generated and runs.
+      args '-c', ". ${envdir}/bin/activate && ./scripts/run_postcommit.sh IT batch TestDirectRunner"
+    }
+  }
+  doLast {
+    exec {
+      executable 'sh'
+      args '-c', ". ${envdir}/bin/activate && ./scripts/run_postcommit.sh IT streaming TestDirectRunner"
     }
   }
 }
@@ -281,7 +286,7 @@ flinkCompatibilityMatrix('Streaming')
 
 task postCommit() {
   dependsOn "preCommit"
-  dependsOn "localWordCount"
+  dependsOn "directRunnerIT"
   dependsOn "hdfsIntegrationTest"
   dependsOn "postCommitITTests"
 }
