--- a/sdks/java/extensions/tpc/build.gradle
+++ b/sdks/java/extensions/tpc/build.gradle
@@ -28,9 +28,8 @@ def avatica_version = "1.11.0"
 dependencies {
     compile project(path: ":beam-sdks-java-extensions-sql", configuration: "shadow")
     compile project(path: ":beam-sdks-java-core", configuration: "shadow")
-//    runtime project(path: ":beam-runners-flink_2.11", configuration: "shadow")
-//    compile project(path: ":beam-runners-google-cloud-dataflow-java", configuration: "shadow")
     compile project(path: ":beam-sdks-java-io-google-cloud-platform", configuration: "shadow")
+    compile project(path: ":beam-sdks-java-io-hadoop-file-system", configuration: "shadow")
     compile project(path: ":beam-sdks-java-extensions-google-cloud-platform-core", configuration: "shadow")
     compile library.java.protobuf_java
     compile library.java.slf4j_jdk14
@@ -49,12 +48,15 @@ dependencies {
     compile library.java.hamcrest_core
     compile library.java.hamcrest_library
 
+    runtime project(path: ":beam-runners-flink_2.11", configuration: "shadow")
+    compile project(path: ":beam-runners-google-cloud-dataflow-java", configuration: "shadow")
+    compile project(path: ":beam-runners-direct-java", configuration: "shadow")
+
 //    compile "org.apache.calcite:calcite-core:$calcite_version"
 //    compile "org.apache.calcite:calcite-linq4j:$calcite_version"
 //    compile "org.apache.calcite.avatica:avatica-core:$avatica_version"
 
     // Spark
-//    compile project(path: ":beam-runners-direct-java", configuration: "shadow")
     compile project(path: ":beam-runners-spark", configuration: "shadow")
 
     compile library.java.spark_streaming, {
