[BEAM-4130] Build Docker image for Flink's JobServer
This adds a new Gradle module flink-job-server-container which builds a docker
image during the `docker` task. The image contains the FlinkJobServerDriver
which is the entry point for submitting Beam pipelines to the cluster.

The image can then be used to spawn a JobServer container when executing a Beam
pipeline, i.e. `p.run()`. The SDKs (Java/Python/Go) need to be updated to either
spawn up a container or use the address of a remote JobServer.

--- a/settings.gradle
+++ b/settings.gradle
@@ -42,6 +42,8 @@ include "beam-runners-flink_2.11"
 project(":beam-runners-flink_2.11").dir = file("runners/flink")
 include "beam-runners-flink_2.11-job-server"
 project(":beam-runners-flink_2.11-job-server").dir = file("runners/flink/job-server")
+include "beam-runners-flink_2.11-job-server-container"
+project(":beam-runners-flink_2.11-job-server-container").dir = file("runners/flink/job-server-container")
 include "beam-runners-gcp-gcemd"
 project(":beam-runners-gcp-gcemd").dir = file("runners/gcp/gcemd")
 include "beam-runners-gcp-gcsproxy"
