--- a/.test-infra/dockerized-jenkins/build-env/Dockerfile
+++ b/.test-infra/dockerized-jenkins/build-env/Dockerfile
@@ -38,14 +38,15 @@ ENV PATH="/google-cloud-sdk/bin:${PATH}"
 RUN gcloud components update --quiet || echo 'gcloud components update failed' && \
     rm gcloud.tar.gz
 
+
 # Add the entrypoint script which install gcloud sdk
-#COPY docker-entrypoint.sh /usr/local/bin/
-#RUN ln -s usr/local/bin/docker-entrypoint.sh /entrypoint.sh
-#ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+# COPY docker-entrypoint.sh /usr/local/bin/
+# RUN ln -s usr/local/bin/docker-entrypoint.sh /entrypoint.sh
+# ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 
 # Create beam user to validate the build on user space
-ENV USER=user \
-    UID=1001 \
+ENV USER=beam-jenkins \
+    UID=910\
     GID=1002 \
     HOME=/home/user
 RUN groupadd --system --gid=$GID $USER; \
@@ -55,6 +56,7 @@ RUN mkdir -p $HOME; \
     chmod 777 $HOME;
 USER $USER
 WORKDIR $HOME
+
 #COPY my-first-project-190318.json $HOME/credentials.json
 #RUN  gcloud auth activate-service-account --key-file=credentials.json && \
 #     gcloud config set project my-first-project-190318 && \
