--- a/runners/flink/job-server/build.gradle
+++ b/runners/flink/job-server/build.gradle
@@ -55,9 +55,13 @@ runShadow {
   args = ["--job-host=${jobHost}", "--artifacts-dir=${artifactsDir}"]
   if (cleanArtifactsPerJob)
     args += ["--clean-artifacts-per-job"]
+  if (project.hasProperty("flinkMasterUrl"))
+    args += ["--flink-master-url=${project.property('flinkMasterUrl')}"]
 
   // Enable remote debugging.
   jvmArgs = ["-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"]
+  if (project.hasProperty("logLevel"))
+    jvmArgs += ["-Dorg.slf4j.simpleLogger.defaultLogLevel=${project.property('logLevel')}"]
 }
 
 createPortableValidatesRunnerTask(jobServerDriver: "org.apache.beam.runners.flink.FlinkJobServerDriver", testClasspathConfiguration: configurations.validatesPortableRunner)
