Drop back to PyLint v1.8 when the --py3k flag is used

--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -46,8 +46,7 @@ list_dependencies_command = {envbindir}/python {envbindir}/pip freeze
 
 [testenv:py27]
 commands =
-  python --version
-  pip --version
+  python --version ; pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -60,8 +59,7 @@ commands =
 # See https://docs.python.org/2/library/sys.html#sys.platform for platform codes
 platform = linux2
 commands =
-  python --version
-  pip --version
+  python --version ; pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -70,8 +68,7 @@ commands =
 [testenv:py27-gcp]
 extras = test,gcp
 commands =
-  python --version
-  pip --version
+  python --version ; pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -80,13 +77,12 @@ commands =
 [testenv:py27-lint]
 deps =
   pycodestyle==2.3.1
-  pylint==1.9.2
+  pylint==1.9.3
   future==0.16.0
   isort==4.2.15
   flake8==3.5.0
 commands =
-  python --version
-  pip --version
+  pylint --version ; pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_pylint.sh
 
@@ -94,7 +90,7 @@ commands =
 # Checks for py2/3 compatibility issues
 deps =
   pycodestyle==2.3.1
-  pylint==1.9.2
+  pylint==1.8.4
   future==0.16.0
   isort==4.2.15
   flake8==3.5.0
@@ -118,8 +114,7 @@ modules =
   apache_beam/typehints
   apache_beam/transforms
 commands =
-  python --version
-  pip --version
+  pylint --version ; pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_pylint_2to3.sh {[testenv:py27-lint3]modules}
 
@@ -134,8 +129,7 @@ deps =
 setenv =
     BEAM_EXPERIMENTAL_PY3=1
 commands =
-  python --version
-  pip --version
+  pylint --version ; pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_mini_py3lint.sh
 
@@ -145,8 +139,7 @@ deps =
   Sphinx==1.6.5
   sphinx_rtd_theme==0.2.4
 commands =
-  python --version
-  pip --version
+  python --version ; pip --version
   time {toxinidir}/scripts/generate_pydoc.sh
 
 [testenv:cover]
@@ -154,8 +147,7 @@ commands =
 deps =
   coverage==4.4.1
 commands =
-  python --version
-  pip --version
+  python --version ; pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   # Clean up previously collected data.
   coverage erase
