Drop back to PyLint v1.8 when the --py3k flag is used

--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -46,7 +46,7 @@ list_dependencies_command = {envbindir}/python {envbindir}/pip freeze
 
 [testenv:py27]
 commands =
-  python --version ; pip --version
+  python --version && pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -59,7 +59,7 @@ commands =
 # See https://docs.python.org/2/library/sys.html#sys.platform for platform codes
 platform = linux2
 commands =
-  python --version ; pip --version
+  python --version && pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -68,7 +68,7 @@ commands =
 [testenv:py27-gcp]
 extras = test,gcp
 commands =
-  python --version ; pip --version
+  python --version && pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -82,7 +82,7 @@ deps =
   isort==4.2.15
   flake8==3.5.0
 commands =
-  pylint --version ; pip --version
+  pylint --version && pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_pylint.sh
 
@@ -90,7 +90,7 @@ commands =
 # Checks for py2/3 compatibility issues
 deps =
   pycodestyle==2.3.1
-  pylint==1.8.4
+  pylint==1.7.6
   future==0.16.0
   isort==4.2.15
   flake8==3.5.0
@@ -114,7 +114,7 @@ modules =
   apache_beam/typehints
   apache_beam/transforms
 commands =
-  pylint --version ; pip --version
+  pylint --version && pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_pylint_2to3.sh {[testenv:py27-lint3]modules}
 
@@ -129,9 +129,16 @@ deps =
 setenv =
     BEAM_EXPERIMENTAL_PY3=1
 commands =
-  pylint --version ; pip --version
+  pylint --version && pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_mini_py3lint.sh
+  echo $HOME
+  time flake8 $HOME --count --select=E9,F821,F822,F823 --show-source --statistics
+  echo {toxinidir}/../..
+  time flake8 {toxinidir} --count --select=E9,F821,F822,F823 --show-source --statistics
+  time flake8 {toxinidir}/../.. --count --select=E9,F821,F822,F823 --show-source --statistics
+  echo $JENKINS_HOME
+  time flake8 $JENKINS_HOME --count --select=E9,F821,F822,F823 --show-source --statistics
 
 [testenv:docs]
 extras = test,gcp,docs
@@ -139,7 +146,7 @@ deps =
   Sphinx==1.6.5
   sphinx_rtd_theme==0.2.4
 commands =
-  python --version ; pip --version
+  python --version && pip --version
   time {toxinidir}/scripts/generate_pydoc.sh
 
 [testenv:cover]
@@ -147,7 +154,7 @@ commands =
 deps =
   coverage==4.4.1
 commands =
-  python --version ; pip --version
+  python --version && pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   # Clean up previously collected data.
   coverage erase
